Fix: align text to left in pre

--- a/msgbox/msgbox.css
+++ b/msgbox/msgbox.css
@@ -41,6 +41,10 @@
   text-align: center;
 }
 
+#message-box.center #message-box-contents pre {
+  text-align: left;
+}
+
 #message-box.center > div {
   top: unset;
   right: unset;
